fix: update theme; add light/dark mode; add pnpm workspaces (#8)
* chore: update deps

* fix: update theme

* style: opacity values

* feat: light/dark mode

* init

* refactor: add pnpm

* fix: comment out line styles to be added later

--- a/packages/app/src/app.css
+++ b/packages/app/src/app.css
@@ -5,11 +5,13 @@
 	--button-active: #131316;
 	--foreground: #ffffff;
 	--foreground-muted: #d4d4d8;
+	--accent-yellow: #fcdb00;
 }
 
 .light {
 	--background: #f5f5f5;
 	--button-active: #e5e5e5;
+	--button-hover: #444447;
 	--foreground: #000000;
 	--foreground-muted: #3f3f46;
 }
@@ -19,6 +21,8 @@
 	--color-button-active: var(--button-active);
 	--color-foreground: var(--foreground);
 	--color-foreground-muted: var(--foreground-muted);
+	--color-accent-yellow: var(--accent-yellow);
+	--color-button-hover: var(--button-hover);
 }
 
 body {
@@ -57,7 +61,7 @@ a.active {
 }
 
 .seasonButton {
-	@apply cursor-pointer rounded border border-button-active px-4 py-0.5 text-sm text-foreground-muted transition-colors hover:!bg-zinc-900/80 hover:text-white;
+	@apply cursor-pointer rounded border border-button-active px-4 py-0.5 text-sm text-foreground-muted transition-colors hover:!bg-button-hover hover:text-white;
 }
 
 .seasonButton.active {
